# reasoning-from-scratch

./: .gitignore  pyproject.toml  requirements.txt
ch07/03_rlvr_grpo_scripts_advanced/: 7_6_plus_format_reward.py
learn/: distillation.ipynb  kaggle_run.ipynb  learn.ipynb
learn/grpo-qwen3-math/: README.md  eval.py  reward_utils.py  train.ipynb  train.py
tests/: conftest.py  test_grpo_qwen3_math_rewards.py
